[tool.poetry]
name = "grimoire-ssg"
packages = [
    { include = "grimoiressg" }
]
version = "1.2.0"
description = "A minimalistic Static Site Generator"
authors = ["Sigma <git@sigma-star.io>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.scripts]
grimoiressg = "grimoiressg.scripts:main"

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.7"
jinja2 = "^3.1.5"
pyyaml = "^6.0.2"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "syrupy (>=5.1.0,<6.0.0)"
]
